# html2md

./: Cargo.toml  README.md
.github/workflows/: bench.yml
benches/: Cargo.toml  parse.rs  regression.rs  throughput.rs
fast_html2md/: Cargo.toml
fast_html2md/src/: lib.rs
fast_html2md/src/extended/: mod.rs  sifter.rs
fast_html2md/src/extended/base/: iframe.rs  mod.rs
fast_html2md/src/rewriter/: anchors.rs  counter.rs  handle.rs  iframes.rs  images.rs  lists.rs  mod.rs  quotes.rs  styles.rs  writer.rs
fast_html2md/src/scraper/: dummy.rs  iframes.rs  ignore.rs  mod.rs  paragraphs.rs  tables.rs
fast_html2md/tests/: iframes.rs  images.rs  integration.rs  lists.rs  quotes.rs  styles.rs  tables.rs  unit.rs
src/: anchors.rs  dummy.rs  iframes.rs  images.rs  lib.rs  lists.rs  paragraphs.rs  quotes.rs  tables.rs
src/utils/: inline_elements.rs  mod.rs
test-samples/: dybr-bug-with-tables-masked.html  example.html  markdown-spider-sample.md  post-conflict.html  real-world-1.html  real-world-ja-1.html  spider-cloud.html
test-samples/wiki/: en-wikipedia-org_wiki_Angolan_kusimanse.html  en-wikipedia-org_wiki_Aspartic_acid.html  en-wikipedia-org_wiki_Cat.html  en-wikipedia-org_wiki_Donskoy_cat.html  en-wikipedia-org_wiki_Languages_of_Africa.html  en-wikipedia-org_wiki_Preadaptation.html  en-wikipedia-org_wiki_Small-toothed_palm_civet.html  en-wikipedia-org_wiki_The_New_York_Times.html
tests/: images.rs  integration.rs  lists.rs  quotes.rs  styles.rs  tables.rs  unit.rs
