[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
fast_html2md = { path = "../fast_html2md", version = "0", features = ["tokio", "scraper"] }
tokio = { version = "1", features = [ "full" ] }

[[bench]]
name = "parse"
path = "parse.rs"
harness = false

[features]
