[package]
name = "fast_html2md"
version = "0.0.42"
edition = "2021"
description = "A fast html2md crate for rust"
categories = ["development-tools", "parsing", "parser-implementations"]
keywords = ["html", "markdown", "converter"]
license = "MIT"
documentation = "https://docs.rs/fast_html2md"
repository = "https://github.com/spider-rs/html2md"

[lib]
name = "html2md"

[dependencies]
regex = "1"
lazy_static = "1"
percent-encoding = "2"
auto_encoder = "0"
url = "2"
markup5ever_rcdom = { version = "0.3.0", optional = true }
html5ever = { version = "0.27", optional = true }
lol_html = { version = "2", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
spectral = "0.6.0"
pretty_assertions = "0.7.2"
indoc = "1.0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["rewriter"]
rewriter = ["dep:lol_html"]
scraper = ["dep:html5ever", "dep:markup5ever_rcdom"]
tokio = ["dep:tokio", "dep:tokio-stream"]
